fix: adjust tree label and topic row spacing

--- a/webview/src/main/components/NodeTree.module.scss
+++ b/webview/src/main/components/NodeTree.module.scss
@@ -57,9 +57,6 @@
 
   :global(.semi-tree-option-label) {
     min-width: 0;
-    flex: 1;
-    margin-left: 2px;
-    padding: 2px 4px;
   }
 
   :global(.semi-tree-option-label-text) {
