--- a/webview/src/main/components/TopicRow.module.scss
+++ b/webview/src/main/components/TopicRow.module.scss
@@ -10,7 +10,7 @@
 
   :global(.semi-badge) {
     flex: none;
-    margin-right: 4px;
+    margin-right: 8px;
   }
 }
 
